# esp-gpio-viewer

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.beads/: metadata.json
.cargo/: config.toml
docs/: INTEGRATION.md  ON_DEVICE_VERIFICATION.md
examples/: esp32.rs  esp32s3.rs
src/: capabilities.rs  http.rs  hwinfo.rs  lib.rs  protocol.rs  reader.rs  sampler.rs  server.rs  value.rs
